--- a/style.css
+++ b/style.css
@@ -1,96 +1,118 @@
+html {
+  height: 100%;
+  background: -moz-linear-gradient(top, rgb(2, 247, 255), rgb(255, 104, 149));
+  background: -webkit-linear-gradient(top, rgb(2, 247, 255), rgb(255, 104, 149));
+}
+
 .header {
   border: 3px dotted #673AB7;
-  width: 90%;
-  height: 200px;
-  margin: 0 auto;
+  width: 100%;
+  grid-area: header;
 }
 
 .left {
   border: 3px dashed #673AB7;
-  width: 150px;
-  height: 800px;
+  /* width: 150px; */
+  /* height: 800px; */
   /* float: left; */
   background: red;
-  position: absolute;
+  /* position: absolute; */
+  grid-area: left;
 }
 
 .right {
   border: 3px solid #673AB7;
-  width: 150px;
-  height: 800px;
+  /* width: 150px; */
+  /* height: 800px; */
   /* float: right; */
   background: green;
-  position: absolute;
-  right: 0;
+  /* position: absolute; */
+  /* right: 0; */
+  grid-area: right;
 }
 
 .center {
   border: 3px double #673AB7;
   /* width: 65%; */
-  height: 100%;
+  /* height: 100%; */
   /* float: left; */
   background: yellow;
-  position: absolute;
+  /* position: absolute;
   left: 150px;
-  right: 150px;
+  right: 150px; */
   /*margin: 0 auto;*/
+  grid-area: center;
 }
 
 .footer {
   border: 3px inset #673AB7;
-  width: 90%;
+  width: 100%;
   height: 200px;
-  margin: 0 auto;
+  grid-area: footer;
+  text-align: center;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
-.footer1 {
-  width: 33%;
-  float: left;
-  height: 200px;
-}
-
-.footer2 {
-  width: 34%;
-  float: left;
-  height: 200px;
-}
-
-.footer3 {
-  width: 33%;
-  float: left;
-  height: 200px;
-}
 
 .box {
   height: 1000px;
-  width: 90%;
+  /* width: 90%; */
   margin: 0 auto;
-  position: relative;
+  /* position: relative; */
 }
 
 * {
   margin: 0;
   box-sizing: border-box;
+  
 }
 
 body {
-  background: -moz-linear-gradient(top, rgb(2, 247, 255), rgb(255, 104, 149));
-  background: -webkit-linear-gradient(top, rgb(2, 247, 255), rgb(255, 104, 149));
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px;
+  min-height: 100%;
+  display: grid;
+  grid-template-columns: 150px 1fr 150px;
+  grid-template-rows: 200px 1fr auto;
+  grid-template-areas: "header header header" "left center right" "footer footer footer";
+}
+
+@media screen and (max-width: 600px)  {
+  body {
+    grid-template-columns: 1fr;
+    grid-template-rows: minmax(200px, max-content) auto 1fr auto auto;
+    grid-template-areas: "header" "left" "center" "right" "footer";
+  }
 }
 
 a.knopka {
   /* position: absolute; */
-  color: #fff; /* цвет текста */
-  text-decoration: none; /* убирать подчёркивание у ссылок */
-  user-select: none; /* убирать выделение текста */
-  background: rgb(212,75,56); /* фон кнопки */
-  padding: .7em 1.5em; /* отступ от текста */
-  outline: none; /* убирать контур в Mozilla */
+  color: #fff;
+  /* цвет текста */
+  text-decoration: none;
+  /* убирать подчёркивание у ссылок */
+  user-select: none;
+  /* убирать выделение текста */
+  background: rgb(212, 75, 56);
+  /* фон кнопки */
+  padding: .7em 1.5em;
+  /* отступ от текста */
+  outline: none;
+  /* убирать контур в Mozilla */
   display: block;
-  box-shadow: 0px 0px 10px rgb(152,15,0) inset;
+  box-shadow: 0px 0px 10px rgb(152, 15, 0) inset;
   text-align: center;
-} 
-a.knopka:hover { background: rgb(232,95,76); } /* при наведении курсора мышки */
-a.knopka:active { background: rgb(152,15,0); } /* при нажатии */
+}
+
+a.knopka:hover {
+  background: rgb(232, 95, 76);
+}
+
+/* при наведении курсора мышки */
+
+a.knopka:active {
+  background: rgb(152, 15, 0);
+}
+
+/* при нажатии */
